[package]
name = "rust-by-example"
version = "0.1.0"
authors = ["Tony Han <h.bing612@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
tokio = { version = "1.5", features = ["full"] }
